one more fix for invisible buttons for geopath - next try

--- a/tpl/stdstyle/css/powerTrail.css
+++ b/tpl/stdstyle/css/powerTrail.css
@@ -391,7 +391,7 @@ textarea.powerTrailEditor {
     height: 400px;
 }
 
-.seasonalBackground.right.autumn { /* fix for not clickable overfloved buttons of Geopath*/
+.seasonalBackground.right { /* fix for not clickable overfloved buttons of Geopath*/
   z-index: -1;
 }
 
